--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer">
     </script>
-    
+    <script src='https://rawgit.com/molleindustria/p5.play/master/lib/p5.play.js'></script>
+<!--    
     <script src="https://cdnjs.cloudflare.com/ajax/libs/clmtrackr/1.1.2/clmtrackr.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcode-generator/1.4.4/qrcode.min.js"></script>
     <script src="https://unpkg.com/ml5@0.8.14/dist/ml5.min.js" type="text/javascript"></script>
+-->
 
 
-    <!--<script src="https://cdn.jsdelivr.net/npm/clmtrackr@1.1.2/build/clmtrackr.min.js"></script>-->
-    <!--<script src="https://cdn.jsdelivr.net/npm/ml5@0.6.1/dist/ml5.min.js"></script>-->
 
     <script src="build/build.js"></script>
 
